# wolfie

./: .gitignore  AGENTS.md  CMakeLists.txt  SPEC.md  _architecture.md  _dsp_review.md  _excess_phase_plan.md  _excess_phase_refactor.md  _target_curve_spec.md  dsp_review.md
build-cmake/: CMakeCache.txt
build-refactor/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
doc/: _assessment_may-1.md  _assessment_may_5.md  _assistant_tooling.md  _dsp_deep_research.md  _parameter_heuristics.md  _pre-ringing-compensation.md  _smooth_excess_phase_fadeout.md
obsolete/: SPEC.md  _excess_phase_plan.md
src/: main.cpp  wolfie.rc  wolfie_app.cpp  wolfie_app.h  wolfie_resources.h
src/audio/: asio_audio_backend.cpp  asio_audio_backend.h  asio_sdk.cpp  asio_sdk.h  asio_service.cpp  asio_service.h  audio_backend.h  wasapi_audio_backend.cpp  wasapi_audio_backend.h  wasapi_service.cpp  wasapi_service.h  winmm_audio_backend.cpp  winmm_audio_backend.h
src/core/: models.h  text_utils.cpp  text_utils.h
src/measurement/: dsp_utils.cpp  dsp_utils.h  filter_analysis.cpp  filter_analysis.h  filter_designer.cpp  filter_designer.h  filter_wav_export.cpp  filter_wav_export.h  impulse_windowing.cpp  impulse_windowing.h  measurement_controller.cpp  measurement_controller.h  phase_preparation.cpp  phase_preparation.h  response_analyzer.cpp  response_analyzer.h  response_smoother.cpp  response_smoother.h  room_simulator.cpp  room_simulator.h  stereo_diagnostics.cpp  stereo_diagnostics.h  sweep_generator.cpp  sweep_generator.h  sweet_spot_alignment.cpp  sweet_spot_alignment.h  target_curve_designer.cpp  target_curve_designer.h  waterfall_builder.cpp  waterfall_builder.h
src/persistence/: app_state_repository.cpp  app_state_repository.h  filter_store_repository.cpp  filter_store_repository.h  microphone_calibration_repository.cpp  microphone_calibration_repository.h  room_simulation_repository.cpp  room_simulation_repository.h  wave_file_repository.cpp  wave_file_repository.h  workspace_repository.cpp  workspace_repository.h
src/ui/: alignment_page.cpp  alignment_page.h  analysis_page.cpp  analysis_page.h  filters_page.cpp  filters_page.h  help_bubble.cpp  help_bubble.h  measurement_page.cpp  measurement_page.h  plot_graph.cpp  plot_graph.h  response_graph.cpp  response_graph.h  room_simulation_dialog.cpp  room_simulation_dialog.h  settings_dialog.cpp  settings_dialog.h  smoothing_page.cpp  smoothing_page.h  splash_screen.cpp  splash_screen.h  target_curve_graph.cpp  target_curve_graph.h  target_curve_page.cpp  target_curve_page.h  ui_theme.h  waterfall_graph.cpp  waterfall_graph.h
tests/: excess_phase_mode_tests.cpp  filter_analysis_tests.cpp  filter_design_basics_tests.cpp  filter_design_tests.cpp  filter_export_tests.cpp  filter_test_support.cpp  filter_test_support.h  measurement_loopback_tests.cpp  mixed_phase_tests.cpp  phase_preparation_tests.cpp  test_harness.h
tools/: run-wolfie.ps1  workspace_filter_probe.cpp
